# foyer

./: .buildinfo  .coveragerc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  codecov.yaml  environment-dev-win.yml  environment-dev.yml  environment-docker.yml  environment-win.yml  environment.yml  forcefields.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  smarts.html  usage_examples.html  validation.html
_sources/: installation.rst.txt
devtools/: README.md  docker-entrypoint.sh  release-pypi.sh
docs/: Makefile  atom-typing_options.rst  conf.py  data_structures.rst  docker.rst  docs-env.yml  forcefields.rst  index.rst  installation.rst  make.bat  paper_examples.md  paper_examples.rst  parameter_definitions.md  parameter_definitions.rst  smarts.md  smarts.rst  units.rst  usage_examples.md  usage_examples.rst  validation.rst
examples/: benzene.py  ethane.py
forcefields/: oplsaa.xml
foyer/: AST2NetworkX.py  __init__.py  ast2nx.py  atomtyper.py  chemical_groups.py  element.py  exceptions.py  external_forcefields.py  forcefield.py  gaff_bugs.txt  general_forcefield.py  gmso_ff.py  plugins.py  rule.py  smarts.py  smarts_graph.py  smarts_opls.py  smarts_parser.py  smiles.py  topology_graph.py  topos.py  validator.py  version.py  xml_writer.py
opls_validation/: 1-bromobutane.gro  1-bromopropane.top  1-butanol.gro  1-butanol.top  1-chloronaphthalene.gro  1-cyclopropylpropane.gro  1-pentanol.gro  1-propene.gro  100-41-4.top  100-42-5-gas.gro  100-42-5.mol2  100-42-5.top  100-47-0-gas.gro  100-47-0.mol2  100-47-0.top  100-51-6.top  (+317 more)
(+1493 files in other folders)
